[package]
name = "rust_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
cargo-tarpaulin = "0.20.0"
assert_cmd = "2.0.4"
mockall = "0.11.0"

[[test]]
name = "integration"
path = "tests/integration/main.rs"
